ReactionGame/Reaction_Game_Erika.cydsn/REBUILD.log
--------------- Rebuild Started: 12/15/2024 00:37:18 Project: Reaction_Game_Erika, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
Deleting file ".\Reaction_Game_Erika.cycdx"
Deleting file ".\Reaction_Game_Erika.svd"
Deleting file ".\Reaction_Game_Erika.rpt"
Deleting file ".\Reaction_Game_Erika_timing.html"
cydsfit.exe -.appdatapath "C:\Users\Dheeraj Swaroop S M\AppData\Local\Cypress Semiconductor\PSoC Creator\4.4" -.fdsnotice -.fdswarpdepfile=warp_dependencies.txt -.fdselabdepfile=elab_dependencies.txt -.fdsbldfile=generated_files.txt -.fdsreffile=referenced_files.txt -p D:\MS\HDA\Embedded\EOS\Workbook_continued\Reaction_Game_Erika.cydsn\Reaction_Game_Erika.cyprj -d CY8C5888LTQ-LP097 -s D:\MS\HDA\Embedded\EOS\Workbook_continued\Reaction_Game_Erika.cydsn\Generated_Source\PSoC5 -- -yv2 -q10 -ygs -o2 -v3 -.fftcfgtype=LE
Elaborating Design...
HDL Generation...
Synthesis...
Tech Mapping...
Analog Placement...
Analog Routing...
Analog Code Generation...
Digital Placement...
Digital Routing...
Bitstream Generation...
Bitstream Verification...
Static timing analysis...
API Generation...
Dependency Generation...
Cleanup...
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I.\source\asw -I.\source\bsw -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/main.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c main.c -o .\CortexM3\ARM_GCC_541\Debug\main.o
main.c: In function 'Functsk_Button':
main.c:150:9: warning: implicit declaration of function 'GAME_Play' [-Wimplicit-function-declaration]
         GAME_Play(event);
         ^
main.c: At top level:
main.c:162:6: error: conflicting types for 'GAME_Play'
 RC_t GAME_Play(GAME_event_t);
      ^
main.c:150:9: note: previous implicit declaration of 'GAME_Play' was here
         GAME_Play(event);
         ^
main.c: In function 'GAME_Play':
main.c:188:38: warning: passing argument 2 of 'EE_oo_GetEvent' from incompatible pointer type [-Wincompatible-pointer-types]
                 GetEvent(tsk_Button, &event);  // Get the event that triggered the task
                                      ^
In file included from Generated_Source\PSoC5/ErikaOS_1_ee.h:88:0,
                 from Generated_Source\PSoC5/project.h:47,
                 from main.c:17:
Generated_Source\PSoC5/ErikaOS_1_ee_oo_kernel.inc:340:12: note: expected 'EventMaskRefType {aka unsigned int *}' but argument is of type 'GAME_event_t * {aka enum <anonymous> *}'
 StatusType EE_oo_GetEvent(TaskType TaskID, EventMaskRefType Event);
            ^
main.c:217:38: warning: passing argument 2 of 'EE_oo_GetEvent' from incompatible pointer type [-Wincompatible-pointer-types]
                 GetEvent(tsk_Button, &event);
                                      ^
In file included from Generated_Source\PSoC5/ErikaOS_1_ee.h:88:0,
                 from Generated_Source\PSoC5/project.h:47,
                 from main.c:17:
Generated_Source\PSoC5/ErikaOS_1_ee_oo_kernel.inc:340:12: note: expected 'EventMaskRefType {aka unsigned int *}' but argument is of type 'GAME_event_t * {aka enum <anonymous> *}'
 StatusType EE_oo_GetEvent(TaskType TaskID, EventMaskRefType Event);
            ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Rebuild Failed: 12/15/2024 00:37:26 ---------------
